--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-bootstrap-datetimepicker",
-  "version": "0.0.0-semantic-release",
+  "name": "angular-datetimepicker-codev",
+  "version": "0.0.0",
   "description": "This directive allows you to add a datetime-picker to your form elements.",
-  "author": "https://github.com/dalelotts/angular-bootstrap-datetimepicker/graphs/contributors",
+  "author": "Gallagher Communication",
   "license": "MIT",
   "homepage": "",
   "main": "index.js",
