--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,6 @@
   "ignore": [],
   "dependencies": {},
   "main": [
-    "rollups/sha1.js",
-    "rollups/md5.js"
+    "js/datetimepicker.js"
   ]
 }
